--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.972027972027972" branch-rate="0.8888888888888888" lines-covered="139" lines-valid="143" branches-covered="48" branches-valid="54" complexity="2.2" version="2.1.1" timestamp="1442312937237">
+<coverage line-rate="0.972972972972973" branch-rate="0.8888888888888888" lines-covered="144" lines-valid="148" branches-covered="48" branches-valid="54" complexity="2.111111111111111" version="2.1.1" timestamp="1442317643480">
 	<packages />
 </coverage>
