--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9733333333333334" branch-rate="0.8888888888888888" lines-covered="146" lines-valid="150" branches-covered="48" branches-valid="54" complexity="2.0714285714285716" version="2.1.1" timestamp="1442318503430">
+<coverage line-rate="0.9735099337748344" branch-rate="0.8888888888888888" lines-covered="147" lines-valid="151" branches-covered="48" branches-valid="54" complexity="2.0714285714285716" version="2.1.1" timestamp="1442330262063">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9733333333333334" branch-rate="0.8888888888888888" complexity="2.0714285714285716">
+		<package name="com.tw.biblioteca" line-rate="0.9735099337748344" branch-rate="0.8888888888888888" complexity="2.0714285714285716">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -371,13 +371,13 @@
 								<line number="11" hits="2" branch="false"/>
 							</lines>
 						</method>
-						<method name="readLibraryNumber" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="libraryNumber" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="14" hits="1" branch="false"/>
 								<line number="15" hits="1" branch="false"/>
 							</lines>
 						</method>
-						<method name="readPassword" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="password" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="19" hits="1" branch="false"/>
 								<line number="20" hits="1" branch="false"/>
@@ -592,6 +592,18 @@
 						<line number="38" hits="1" branch="false"/>
 						<line number="39" hits="1" branch="false"/>
 						<line number="41" hits="7" branch="false"/>
+					</lines>
+				</class>
+				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="0.0">
+					<methods>
+						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="4" hits="1" branch="false"/>
+							</lines>
+						</method>
+					</methods>
+					<lines>
+						<line number="4" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
