aaded spec that users with different library number should not be equal

--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.974025974025974" branch-rate="0.8888888888888888" lines-covered="150" lines-valid="154" branches-covered="48" branches-valid="54" complexity="2.0" version="2.1.1" timestamp="1442330613632">
+<coverage line-rate="0.9748427672955975" branch-rate="0.896551724137931" lines-covered="155" lines-valid="159" branches-covered="52" branches-valid="58" complexity="2.1333333333333333" version="2.1.1" timestamp="1442331904630">
 	<packages />
 </coverage>
