added a class Authenticator with spec to validate user

--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9751552795031055" branch-rate="0.9" lines-covered="157" lines-valid="161" branches-covered="54" branches-valid="60" complexity="2.2" version="2.1.1" timestamp="1442333233563">
+<coverage line-rate="0.9761904761904762" branch-rate="0.9" lines-covered="164" lines-valid="168" branches-covered="54" branches-valid="60" complexity="2.125" version="2.1.1" timestamp="1442334841780">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9751552795031055" branch-rate="0.9" complexity="2.2">
+		<package name="com.tw.biblioteca" line-rate="0.9761904761904762" branch-rate="0.9" complexity="2.125">
 			<classes>
+				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
+					<methods>
+						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="7" hits="1" branch="false"/>
+								<line number="9" hits="1" branch="false"/>
+								<line number="10" hits="1" branch="false"/>
+								<line number="11" hits="1" branch="false"/>
+								<line number="12" hits="1" branch="false"/>
+							</lines>
+						</method>
+						<method name="checkValidity" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="15" hits="1" branch="false"/>
+								<line number="16" hits="1" branch="false"/>
+							</lines>
+						</method>
+					</methods>
+					<lines>
+						<line number="7" hits="1" branch="false"/>
+						<line number="9" hits="1" branch="false"/>
+						<line number="10" hits="1" branch="false"/>
+						<line number="11" hits="1" branch="false"/>
+						<line number="12" hits="1" branch="false"/>
+						<line number="15" hits="1" branch="false"/>
+						<line number="16" hits="1" branch="false"/>
+					</lines>
+				</class>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -366,15 +394,15 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/util/Scanner;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="2" branch="false"/>
-								<line number="10" hits="2" branch="false"/>
-								<line number="11" hits="2" branch="false"/>
+								<line number="9" hits="3" branch="false"/>
+								<line number="10" hits="3" branch="false"/>
+								<line number="11" hits="3" branch="false"/>
 							</lines>
 						</method>
 						<method name="libraryNumber" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="14" hits="1" branch="false"/>
-								<line number="15" hits="1" branch="false"/>
+								<line number="14" hits="2" branch="false"/>
+								<line number="15" hits="2" branch="false"/>
 							</lines>
 						</method>
 						<method name="password" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -385,11 +413,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="2" branch="false"/>
-						<line number="10" hits="2" branch="false"/>
-						<line number="11" hits="2" branch="false"/>
-						<line number="14" hits="1" branch="false"/>
-						<line number="15" hits="1" branch="false"/>
+						<line number="9" hits="3" branch="false"/>
+						<line number="10" hits="3" branch="false"/>
+						<line number="11" hits="3" branch="false"/>
+						<line number="14" hits="2" branch="false"/>
+						<line number="15" hits="2" branch="false"/>
 						<line number="19" hits="1" branch="false"/>
 						<line number="20" hits="1" branch="false"/>
 					</lines>
@@ -598,59 +626,59 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="6" branch="false"/>
-								<line number="8" hits="6" branch="false"/>
-								<line number="9" hits="6" branch="false"/>
+								<line number="7" hits="9" branch="false"/>
+								<line number="8" hits="9" branch="false"/>
+								<line number="9" hits="9" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="13" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="14" hits="1" branch="false"/>
-								<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="17" hits="1" branch="false"/>
-								<line number="18" hits="2" branch="false"/>
-								<line number="19" hits="2" branch="true" condition-coverage="100% (2/2)">
+								<line number="18" hits="3" branch="false"/>
+								<line number="19" hits="3" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="20" hits="1" branch="false"/>
+								<line number="20" hits="2" branch="false"/>
 								<line number="22" hits="1" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="6" branch="false"/>
-						<line number="8" hits="6" branch="false"/>
-						<line number="9" hits="6" branch="false"/>
-						<line number="13" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="7" hits="9" branch="false"/>
+						<line number="8" hits="9" branch="false"/>
+						<line number="9" hits="9" branch="false"/>
+						<line number="13" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="14" hits="1" branch="false"/>
-						<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="17" hits="1" branch="false"/>
-						<line number="18" hits="2" branch="false"/>
-						<line number="19" hits="2" branch="true" condition-coverage="100% (2/2)">
+						<line number="18" hits="3" branch="false"/>
+						<line number="19" hits="3" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="20" hits="1" branch="false"/>
+						<line number="20" hits="2" branch="false"/>
 						<line number="22" hits="1" branch="false"/>
 					</lines>
 				</class>
