--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9761904761904762" branch-rate="0.9" lines-covered="164" lines-valid="168" branches-covered="54" branches-valid="60" complexity="2.125" version="2.1.1" timestamp="1442334841780">
+<coverage line-rate="0.9761904761904762" branch-rate="0.9" lines-covered="164" lines-valid="168" branches-covered="54" branches-valid="60" complexity="2.125" version="2.1.1" timestamp="1442335326075">
 	<sources>
 		<source>src</source>
 	</sources>
@@ -12,28 +12,28 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="1" branch="false"/>
-								<line number="9" hits="1" branch="false"/>
-								<line number="10" hits="1" branch="false"/>
-								<line number="11" hits="1" branch="false"/>
-								<line number="12" hits="1" branch="false"/>
+								<line number="7" hits="2" branch="false"/>
+								<line number="9" hits="2" branch="false"/>
+								<line number="10" hits="2" branch="false"/>
+								<line number="11" hits="2" branch="false"/>
+								<line number="12" hits="2" branch="false"/>
 							</lines>
 						</method>
-						<method name="checkValidity" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="isValid" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="15" hits="1" branch="false"/>
-								<line number="16" hits="1" branch="false"/>
+								<line number="15" hits="2" branch="false"/>
+								<line number="16" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="1" branch="false"/>
-						<line number="9" hits="1" branch="false"/>
-						<line number="10" hits="1" branch="false"/>
-						<line number="11" hits="1" branch="false"/>
-						<line number="12" hits="1" branch="false"/>
-						<line number="15" hits="1" branch="false"/>
-						<line number="16" hits="1" branch="false"/>
+						<line number="7" hits="2" branch="false"/>
+						<line number="9" hits="2" branch="false"/>
+						<line number="10" hits="2" branch="false"/>
+						<line number="11" hits="2" branch="false"/>
+						<line number="12" hits="2" branch="false"/>
+						<line number="15" hits="2" branch="false"/>
+						<line number="16" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
@@ -394,15 +394,15 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/util/Scanner;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="3" branch="false"/>
-								<line number="10" hits="3" branch="false"/>
-								<line number="11" hits="3" branch="false"/>
+								<line number="9" hits="4" branch="false"/>
+								<line number="10" hits="4" branch="false"/>
+								<line number="11" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="libraryNumber" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="14" hits="2" branch="false"/>
-								<line number="15" hits="2" branch="false"/>
+								<line number="14" hits="3" branch="false"/>
+								<line number="15" hits="3" branch="false"/>
 							</lines>
 						</method>
 						<method name="password" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -413,11 +413,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="3" branch="false"/>
-						<line number="10" hits="3" branch="false"/>
-						<line number="11" hits="3" branch="false"/>
-						<line number="14" hits="2" branch="false"/>
-						<line number="15" hits="2" branch="false"/>
+						<line number="9" hits="4" branch="false"/>
+						<line number="10" hits="4" branch="false"/>
+						<line number="11" hits="4" branch="false"/>
+						<line number="14" hits="3" branch="false"/>
+						<line number="15" hits="3" branch="false"/>
 						<line number="19" hits="1" branch="false"/>
 						<line number="20" hits="1" branch="false"/>
 					</lines>
@@ -626,60 +626,60 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="9" branch="false"/>
-								<line number="8" hits="9" branch="false"/>
-								<line number="9" hits="9" branch="false"/>
+								<line number="7" hits="12" branch="false"/>
+								<line number="8" hits="12" branch="false"/>
+								<line number="9" hits="12" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="5" branch="true" condition-coverage="100% (2/2)">
+								<line number="13" hits="7" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="14" hits="1" branch="false"/>
-								<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="16" hits="6" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="17" hits="1" branch="false"/>
-								<line number="18" hits="3" branch="false"/>
-								<line number="19" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="18" hits="5" branch="false"/>
+								<line number="19" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="20" hits="2" branch="false"/>
-								<line number="22" hits="1" branch="false"/>
+								<line number="22" hits="3" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="9" branch="false"/>
-						<line number="8" hits="9" branch="false"/>
-						<line number="9" hits="9" branch="false"/>
-						<line number="13" hits="5" branch="true" condition-coverage="100% (2/2)">
+						<line number="7" hits="12" branch="false"/>
+						<line number="8" hits="12" branch="false"/>
+						<line number="9" hits="12" branch="false"/>
+						<line number="13" hits="7" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="14" hits="1" branch="false"/>
-						<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="16" hits="6" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="17" hits="1" branch="false"/>
-						<line number="18" hits="3" branch="false"/>
-						<line number="19" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="18" hits="5" branch="false"/>
+						<line number="19" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="20" hits="2" branch="false"/>
-						<line number="22" hits="1" branch="false"/>
+						<line number="22" hits="3" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
