--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9761904761904762" branch-rate="0.9" lines-covered="164" lines-valid="168" branches-covered="54" branches-valid="60" complexity="2.125" version="2.1.1" timestamp="1442335326075">
+<coverage line-rate="0.9767441860465116" branch-rate="0.90625" lines-covered="168" lines-valid="172" branches-covered="58" branches-valid="64" complexity="2.1515151515151514" version="2.1.1" timestamp="1442368219614">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9761904761904762" branch-rate="0.9" complexity="2.125">
+		<package name="com.tw.biblioteca" line-rate="0.9767441860465116" branch-rate="0.90625" complexity="2.1515151515151514">
 			<classes>
-				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
+				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="2" branch="false"/>
-								<line number="9" hits="2" branch="false"/>
-								<line number="10" hits="2" branch="false"/>
-								<line number="11" hits="2" branch="false"/>
-								<line number="12" hits="2" branch="false"/>
+								<line number="7" hits="3" branch="false"/>
+								<line number="9" hits="3" branch="false"/>
+								<line number="10" hits="3" branch="false"/>
+								<line number="11" hits="3" branch="false"/>
+								<line number="12" hits="3" branch="false"/>
 							</lines>
 						</method>
-						<method name="isValid" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="15" hits="2" branch="false"/>
-								<line number="16" hits="2" branch="false"/>
+								<line number="15" hits="3" branch="false"/>
+								<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="17" hits="2" branch="false"/>
+								<line number="19" hits="1" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="2" branch="false"/>
-						<line number="9" hits="2" branch="false"/>
-						<line number="10" hits="2" branch="false"/>
-						<line number="11" hits="2" branch="false"/>
-						<line number="12" hits="2" branch="false"/>
-						<line number="15" hits="2" branch="false"/>
-						<line number="16" hits="2" branch="false"/>
+						<line number="7" hits="3" branch="false"/>
+						<line number="9" hits="3" branch="false"/>
+						<line number="10" hits="3" branch="false"/>
+						<line number="11" hits="3" branch="false"/>
+						<line number="12" hits="3" branch="false"/>
+						<line number="15" hits="3" branch="false"/>
+						<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="17" hits="2" branch="false"/>
+						<line number="19" hits="1" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6666666666666666" branch-rate="1.0" complexity="1.5">
@@ -394,15 +406,15 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/util/Scanner;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="4" branch="false"/>
-								<line number="10" hits="4" branch="false"/>
-								<line number="11" hits="4" branch="false"/>
+								<line number="9" hits="2" branch="false"/>
+								<line number="10" hits="2" branch="false"/>
+								<line number="11" hits="2" branch="false"/>
 							</lines>
 						</method>
 						<method name="libraryNumber" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="14" hits="3" branch="false"/>
-								<line number="15" hits="3" branch="false"/>
+								<line number="14" hits="1" branch="false"/>
+								<line number="15" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="password" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -413,11 +425,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="4" branch="false"/>
-						<line number="10" hits="4" branch="false"/>
-						<line number="11" hits="4" branch="false"/>
-						<line number="14" hits="3" branch="false"/>
-						<line number="15" hits="3" branch="false"/>
+						<line number="9" hits="2" branch="false"/>
+						<line number="10" hits="2" branch="false"/>
+						<line number="11" hits="2" branch="false"/>
+						<line number="14" hits="1" branch="false"/>
+						<line number="15" hits="1" branch="false"/>
 						<line number="19" hits="1" branch="false"/>
 						<line number="20" hits="1" branch="false"/>
 					</lines>
@@ -622,64 +634,80 @@
 						<line number="41" hits="7" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="4.0">
+				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="3.0">
 					<methods>
-						<method name="&lt;init&gt;" signature="(Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="12" branch="false"/>
-								<line number="8" hits="12" branch="false"/>
-								<line number="9" hits="12" branch="false"/>
+								<line number="8" hits="17" branch="false"/>
+								<line number="9" hits="17" branch="false"/>
+								<line number="10" hits="17" branch="false"/>
+								<line number="11" hits="17" branch="false"/>
+							</lines>
+						</method>
+						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="28" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="13" hits="7" branch="true" condition-coverage="100% (2/2)">
+								<line number="15" hits="10" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="14" hits="1" branch="false"/>
-								<line number="16" hits="6" branch="true" condition-coverage="100% (2/2)">
+								<line number="16" hits="1" branch="false"/>
+								<line number="18" hits="9" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="17" hits="1" branch="false"/>
-								<line number="18" hits="5" branch="false"/>
-								<line number="19" hits="5" branch="true" condition-coverage="100% (2/2)">
+								<line number="19" hits="1" branch="false"/>
+								<line number="20" hits="8" branch="false"/>
+								<line number="21" hits="8" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="20" hits="2" branch="false"/>
-								<line number="22" hits="3" branch="false"/>
+								<line number="22" hits="5" branch="false"/>
+								<line number="24" hits="3" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="12" branch="false"/>
-						<line number="8" hits="12" branch="false"/>
-						<line number="9" hits="12" branch="false"/>
-						<line number="13" hits="7" branch="true" condition-coverage="100% (2/2)">
+						<line number="8" hits="17" branch="false"/>
+						<line number="9" hits="17" branch="false"/>
+						<line number="10" hits="17" branch="false"/>
+						<line number="11" hits="17" branch="false"/>
+						<line number="15" hits="10" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="14" hits="1" branch="false"/>
-						<line number="16" hits="6" branch="true" condition-coverage="100% (2/2)">
+						<line number="16" hits="1" branch="false"/>
+						<line number="18" hits="9" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="17" hits="1" branch="false"/>
-						<line number="18" hits="5" branch="false"/>
-						<line number="19" hits="5" branch="true" condition-coverage="100% (2/2)">
+						<line number="19" hits="1" branch="false"/>
+						<line number="20" hits="8" branch="false"/>
+						<line number="21" hits="8" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="20" hits="2" branch="false"/>
-						<line number="22" hits="3" branch="false"/>
+						<line number="22" hits="5" branch="false"/>
+						<line number="24" hits="3" branch="false"/>
+						<line number="28" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
